fixes text overflow by allowing cards to grow

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,6 @@ a​:hover {
   }
 
   .wikicard {
-    height: 20vh;
     line-height: 20vh; 
     vertical-align: middle;
     width: 98%;
